react-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react-app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
        terraform: "false"
    spec:
      # volumes:
      #   - name: log-pvc
      #     persistentVolumeClaim:
      #       claimName: data-minio-0
      containers:
      - name: react-app
        image: klimdos/comments:0.0.1-g123456
        # env:
          # - name: PORT
          #   value: "8080"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        # volumeMounts:
        # - mountPath: /opt/logs
        #   name: log-pvc
