react-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-svc
spec:
  ports:
    - port: 80
      name: plaintext
      targetPort: 80
  selector:
    app: react-app
  type: ClusterIP
