react-app/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret # NON-EXISTENT
  rules:
  - host: comments.klimdos.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: react-app-svc
          servicePort: 80
